	views.  Thanks to filterfalse.

	Never add parent entry (..) to very custom view (%U).  Thanks to
	filterfalse.

	Removed caret escaping on Windows...  Thanks to Reva Revadigar.

	Silently ignore tries to remove parent entry (..).  Thanks to aleksejrs.

	A bit better delete confirmation messages with number of files to be
	deleted.

	Improved syntax highlighting of patterns.

	Fixed kind of a duplicate of first history element on =.

	Fixed displaying size for symbolic links to directories on changing views
	and determining whether they point to a directory in custom views.

	Fixed backward search in menus, which was performed in the opposite
	direction.

	Fixed hanging on sudden terminal loss.  Thanks to aleksejrs.

	Fixed crash on using extremely long function name.

	Fixed overwriting files after editing destination file name.  Thanks to
	rbong.

	Fixed querying file information on 64-bit Windows.  Thanks to santhoshr.

	Fixed crash on very long option value on :set.  Thanks to aleksejrs.

	Fixed displaying non-latin characters in LHS of mapping in map menus.
	Thanks to filterfalse.

	Fixed updating view columns after local options synchronization via
	:sync!.  Thanks to filterfalse.

	Fixed possible crash on Windows on displaying job bar (e.g. after :empty).
	Thanks to Reva Revadigar.

	Fixed escaping on Windows when opening files via :edit.

	Fixed UTF8 <-> UTF16 conversion on Windows, which didn't always work (on
	surrogate characters it seems).  Thanks to Reva Revadigar.

	Fixed possible unexpectedly long timeouts when waiting for a key on
	Windows (due to limitation of pdcurses).

	Fixed displaying of wide (CJK) in pdcurses on Windows.  Thanks to Reva
	Revadigar.

	Fixed for architectures on which `char` is unsigned by default.  Thanks to
	Ondrej Novy (a.k.a. onovy).

	Fixed unconditional resetting of executable permission when using cp
	dialog.  Thanks to Svyatoslav Mishyn (a.k.a. juef).
