@@ -321,7 +321,7 @@ void flist_add_custom_line(FileView *view, const char line[]);
  * handling and cursor position. */
 void flist_end_custom(FileView *view, int very);
 /* Changes name of a file entry, performing additional required updates. */
-void fentry_rename(dir_entry_t *entry, const char to[]);
+void fentry_rename(FileView *view, dir_entry_t *entry, const char to[]);
 
 TSTATIC_DEFS(
 	TSTATIC void pick_cd_path(FileView *view, const char base_dir[],
