@@ -523,6 +523,20 @@ TEST(can_set_very_cv_twice_in_a_row)
 	columns_clear_column_descs();
 }
 
+TEST(renaming_dir_in_cv_adjust_its_children_entries)
+{
+	copy_str(lwin.curr_dir, sizeof(lwin.curr_dir), test_data);
+	flist_custom_start(&lwin, "test");
+	flist_custom_add(&lwin, TEST_DATA_PATH "/existing-files");
+	flist_custom_add(&lwin, TEST_DATA_PATH "/existing-files/a");
+	assert_true(flist_custom_finish(&lwin, 0) == 0);
+	assert_int_equal(2, lwin.list_rows);
+
+	fentry_rename(&lwin, &lwin.dir_entry[0], "existing_files");
+	assert_string_equal(TEST_DATA_PATH "/existing_files",
+			lwin.dir_entry[1].origin);
+}
+
 static void
 column_line_print(const void *data, int column_id, const char buf[],
 		size_t offset, AlignType align, const char full_column[])
