@@ -103,6 +103,9 @@
 
 	Improved syntax highlighting of patterns.
 
+	Automatically update custom view entries on rename of their parent
+	directory in the save custom view.
+
 	Fixed kind of a duplicate of first history element on =.
 
 	Fixed displaying size for symbolic links to directories on changing views
